--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -12,7 +12,7 @@
     width: 1.8rem!important;
     height: 100%;
     position: fixed;
-    top: 0;
+    top: 0.6rem;
     bottom: 0;
     left: 0;
     z-index: 1001;
