--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -1,5 +1,5 @@
 h1{
-  margin : 0.3rem 0 ;
+  margin : 0 ;
   padding : 0.2rem  0.4rem ;
   border-bottom : 1px solid #666 ;
   font-size : 0.22rem ;
