--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -7,7 +7,7 @@ h1{
 }
 
 .search{
-  margin-left : 0.3rem ;
+  //margin : 0 0.3rem ;
   padding : 0.2rem 0.3rem ;
   box-sizing: border-box;
   .el-input{
