--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -100,8 +100,7 @@ $light_gray:#eee;
     width : 0.8rem ;
     height : 0.35rem ;
     color : #666;
-    margin-top : 0.1rem ;
-    margin-right : 0.1rem ;
+    margin : 0.085rem 0.1rem;
     padding : 0 ;
     line-height : 0.35rem ;
     text-align : center;
