--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -123,5 +123,9 @@
  .el-dialog__title{
    color : #333 ;
  }
-
+.el-checkbox{
+  font-size : 0.12rem ;
+  height : 0.4rem ;
+  line-height : 0.4rem ;
+}
 
