--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,14 +9,42 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  overflow-y: scroll;
+  overflow-x:hidden;
 }
-
+// div{  overflow-y: scroll; overflow-x:hidden;}
 html {
   box-sizing: border-box;
-  font-size : 100px;
+  // font-size : 100;
 
 }
+#app .el-menu-item, #app .el-submenu__title{
+  height: .56rem;
+    line-height: .56rem;
+    padding: 0 .2rem;
+    font-size: .14rem;
+  
+}
+#app .el-menu-item{
+  padding-left: .4rem !important;
+}
+#app .el-submenu>.el-submenu__title{
+  padding-left:.2rem !important;
+}
+#app .nest-menu .el-submenu__title{
+  padding-left: .4rem !important;
+}
+#app .nest-menu .el-menu .el-menu-item{
+  padding-left: .6rem !important;
+}
+#app .el-button{padding: .12rem .2rem;}
 .settings .el-dialog__headerbtn{display: none}
+#app .el-form-item__label{
+  padding: 0 .12rem 0 0;
+  font-size: .14rem;
+}
+#app .el-radio__label{    font-size: .14rem;
+  padding-left: .1rem;}
 *,
 *:before,
 *:after {
