--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -28,17 +28,17 @@ $light_gray:#eee;
 
   }
   input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0rem 1000rem #293444 inset !important;
+    -webkit-box-shadow: 0 0 0 1000rem #293444 inset !important;
     -webkit-text-fill-color: #fff !important;
   }
   input {
     background: transparent;
-    border: 0rem;
+    border: 0;
     -webkit-appearance: none;
-    border-radius: 0rem;
+    border-radius: 0;
     padding: 0.12rem 0.05rem 0.12rem 0.15rem;
     color: $light_gray;
-    height: 0.47rem;
+    height: 47px;
   }
   .el-input {
     display: inline-block;
@@ -58,7 +58,7 @@ $light_gray:#eee;
     display: inline-block;
     box-sizing: border-box;
     &_login {
-      font-size: 0.20rem;
+      font-size: 20px;
     }
 
   }
@@ -66,7 +66,9 @@ $light_gray:#eee;
     font-size: 0.26rem;
     font-weight: 400;
     color: $light_gray;
-    margin: 0 auto 0.40rem auto;
+    margin-bottom: 0.40rem;
+    width : 326px;
+    box-sizing: border-box;
     text-align: center;
     span{
       font-size: 0.2rem;
@@ -78,10 +80,10 @@ $light_gray:#eee;
     position: absolute;
     left: 0;
     right: 0;
-    width: 4rem;
+    width: 400px;
     padding: 0.35rem 0.35rem 0.15rem 0.35rem;
     margin: 1.20rem auto;
-
+    box-sizing: border-box;
   }
   .el-form-item {
     border: 0.01rem solid rgba(255, 255, 255, 0.1);
@@ -92,7 +94,7 @@ $light_gray:#eee;
     width : 327px;
   }
   .el-form-item__content{
-    line-height : 0.4rem;
+    line-height : 40px;
 
   }
   .show-pwd {
@@ -111,7 +113,7 @@ $light_gray:#eee;
   }
   .show-captcha{
     display : inline-block ;
-    height: 0.52rem ;
+    height: 50px ;
     width : 1rem ;
     float : right ;
     margin : auto 0;
@@ -119,11 +121,11 @@ $light_gray:#eee;
   }
   .codeBtn{
     width : 80px ;
-    height : 0.35rem ;
+    height : 35px;
     color : #666;
-    margin : 0.085rem 10px;
+    margin : 8.5px 10px;
     padding : 0 ;
-    line-height : 0.35rem ;
+    line-height : 35px ;
     text-align : center;
   }
   .el-dialog{
@@ -145,7 +147,10 @@ $light_gray:#eee;
     font-size : 0.12rem ;
   }
   .el-checkbox__inner{
-    width : 0.14rem ;
-    height : 0.14rem ;
+    width : 12px ;
+    height : 12px ;
+  }
+  .validateCode .el-input{
+    width : 160px;
   }
 }
