--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -112,7 +112,8 @@ a:hover {
     left: 12%;
   }
 }
-.money_color{color: red}
+.money_color{color: #ff0011}
+.tips_warn{ color : #f10110!important; }
 .c666{color: #666}
 .f18{font-size: 0.18rem}
 .f14{font-size: 0.14rem}
