--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -1,63 +1,189 @@
-h1{
-  margin : 0 ;
-  padding : 0.2rem  0.4rem ;
-  border-bottom : 1px solid #666 ;
-  font-size : 0.22rem ;
-  line-height : 0.4rem ;
-}
+.tableBox{
+  h1{
+    margin : 0 ;
+    padding : 0.2rem  0.4rem ;
+    border-bottom : 1px solid #666 ;
+    font-size : 0.22rem ;
+    line-height : 0.4rem ;
+  }
 
-.search{
-  //margin : 0 0.3rem ;
-  padding : 0.2rem 0.3rem ;
-  box-sizing: border-box;
-  .el-input{
-    width : 2rem ;
-    margin :  0 0.3rem ;
-    font-size : 0.14rem ;
-    color : #8f949a;
+  //.search{
+  //  //margin : 0 0.3rem ;
+  //  padding : 0.2rem 0.3rem ;
+  //  box-sizing: border-box;
+  //  .el-input{
+  //    width : 2rem ;
+  //    margin-left :   0.3rem ;
+  //    font-size : 0.14rem ;
+  //    color : #8f949a;
+  //
+  //  }
+  //  .el-select{
+  //    margin-left : 0.3rem ;
+  //    width : 1.4rem ;
+  //    background : #eee ;
+  //  }
+  //  .searchOrder{
+  //    width : 1rem ;
+  //    height : 0.34rem ;
+  //    border-radius : 0.2rem ;
+  //    font-size : 0.14rem ;
+  //    color : #fff;
+  //    background : #409EFF;
+  //    margin-left : 0.2rem ;
+  //  }
+  //  .block{
+  //    width : 45% ;
+  //    //float : left;
+  //    display: inline-block;
+  //    margin-bottom : 0.2rem ;
+  //    margin-top : 0.2rem ;
+  //
+  //    span{
+  //      width : 1.6rem ;
+  //      height : 100% ;
+  //      line-height : 0.4rem ;
+  //      display : inline-block ;
+  //      //float : left;
+  //      text-align : right ;
+  //      color : #333;
+  //      margin-right : 25px ;
+  //      &:nth-last-child(2){
+  //        width : 0.25rem ;
+  //        margin : 0 ;
+  //        text-align : center ;
+  //      }
+  //    }
+  //    .el-date-editor, .el-range-editor, .el-input__inner, .el-date-editor--daterange, .is-active{
+  //      width : 30% ;
+  //      margin : 0;
+  //      /*padding : 0 0.03rem;*/
+  //
+  //    }
+  //  }
+  //
+  //}
+
+  .el-table{
+    width: 90%;
+    border-color:#aaa ;
+    border-radius : 0.05rem ;
+    margin : 0.4rem auto;
+    .el-button{
+      /*width : 0.9rem ;*/
+      /*border-radius : 0.08rem ;*/
+      font-size : 0.13rem ;
+      padding : 0;
+      margin : 0;
+    }
 
   }
-  .el-select{
-    margin-left : 0.1rem ;
-    width : 1.4rem ;
-    background : #eee ;
+
+  .block2{
+    padding : 0 0.3rem ;
+    width : 90% ;
+    margin : 0 auto;
+    box-sizing: border-box;
+    .totalItems{
+      display : block ;
+      height : 0.3rem ;
+      color : #666 ;
+      text-align : right ;
+      margin-top : 0.3rem ;
+    }
   }
   .searchOrder{
-    width : 1rem ;
-    height : 0.34rem ;
-    border-radius : 0.2rem ;
+    height : 34px ;
+  }
+  .note{
+    padding-left : 0.3rem ;
+    width : 100% ;
+    border-bottom : 1px solid #aaa ;
+    height : 0.4rem ;
+    line-height : 0.4rem ;
     font-size : 0.14rem ;
-    color : #fff;
-    background : #409EFF;
-    margin-left : 0.2rem ;
+    text-indent : 0.32rem ;
+    color : #999 ;
   }
-}
-
-.el-table{
-  width: 90%;
-  border-color:#aaa ;
-  border-radius : 0.05rem ;
-  margin : 0.4rem auto;
-  .el-button{
-    /*width : 0.9rem ;*/
-    /*border-radius : 0.08rem ;*/
-    font-size : 0.13rem ;
-    padding : 0;
-    margin : 0;
+  .mainPic{
+    width : 0.6rem ;
+    height : 0.6rem ;
   }
 
-}
+  .el-dialog{
+    .el-form{
+      padding : 0  0.3rem ;
+      .reason{
+        width : 100% ;
+        color : #666;
+        display : inline-block ;
+      }
+      .el-textarea{
+        width : 80% ;
+      }
+    }
+  }
+  .el-dialog {
 
-.block2{
-  padding : 0 0.3rem ;
-  width : 90% ;
-  margin : 0 auto;
-  box-sizing: border-box;
-  .totalItems{
-    display : block ;
-    height : 0.3rem ;
-    color : #666 ;
-    text-align : right ;
-    margin-top : 0.3rem ;
+  dl{
+  width : 40% ;
+  margin : 0 auto ;
+  text-align : center ;
+
+  dt{
+  width : 100% ;
+  height : 0.5rem ;
+  line-height : 0.5rem ;
+  color : #456 ;
+  text-align : center ;
+
+  }
+  dd{
+  max-height : 3rem ;
+  width : 100% ;
+  margin : 0 auto  ;
+  display : flex;
+  justify-content: center;
+  align-items: center;
+  img{
+  max-width : 100% ;
+  max-height : 2.5rem  ;
+  }
+  }
+  }
+  .noViewPic{
+  height : 100px;
+  line-height : 100px;
+  }
+  p {
+  display: inline-block;
+  margin-bottom: 0.1rem;
+  }
+  .dialog-footer{
+  height : 1rem ;
+  .el-button {
+  width : 0.9rem ;
+  padding : 0;
+  text-align : center ;
+  line-height : 0.35rem ;
+  }
+  }
+
+  }
+  .mask{
+    position : fixed ;
+    top : 0;
+    left : 0 ;
+    width : 100% ;
+    height : 100% ;
+    background : rgba(250,250,250,0.3) ;
+    display : flex ;
+    align-items: center;
+    justify-content: center;
+    z-index : 10000;
+    img{
+      max-height : 100% ;
+
+    }
   }
 }
