--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -53,7 +53,7 @@
     height : 0.6rem ;
   }
   .showPic{
-    width : 0.35rem ;
+    //width : 0.35rem ;
     height : 0.6rem ;
   }
   .el-dialog{
