--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,7 +1,4 @@
-$bg:#2d3a4b;
-$dark_gray:#889aa4;
-$light_gray:#eee;
-
+@import './variables.scss';
 .login-container {
   position: fixed;
   height: 100%;
