--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,6 +1,8 @@
+@import './variables.scss';
+
 #app {
   // 主体区域
-  .main-container {
+  .sub-container {
     min-height: 100%;
     transition: margin-left 0.28s;
     margin-left: 170px;
@@ -38,7 +40,7 @@
       width: 36px!important;
       // overflow: inherit;
     }
-    .main-container {
+    .sub-container {
       margin-left: 36px;
     }
   }
