--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,9 @@
 //sidebar
-$menuBg:#304156;
+$menuBg:#2d3a4b;
 $subMenuBg:#1f2d3d;
 $menuHover:#001528;
+
+//login
+$bg:#304156;
+$dark_gray:#889aa4;
+$light_gray:#eee;
