--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,3 +7,8 @@ $menuHover:#001528;
 $bg:#304156;
 $dark_gray:#889aa4;
 $light_gray:#eee;
+
+//hover
+$hover : #d3dadf;
+//active
+$active : #2d3a4b ;
