--- a/src/styles/step.scss
+++ b/src/styles/step.scss
@@ -39,12 +39,28 @@ h1{
 
 }
 .el-dialog{
-  position : relative ;
-  img{
-    //position: absolute ;
-    //top :50%;
-    //left :50% ;
-    //margin :0 !important ;
-    //transform : translate(-50%, -50%);
+  .wrap{
+    width : 50% ;
+    margin : auto ;
+    img{
+      width : 100% ;
+      //position: absolute ;
+      //top :50%;
+      //left :50% ;
+      //margin :0 !important ;
+      //transform : translate(-50%, -50%);
+    }
   }
+
+}
+.img_Title{
+  width : 100% ;
+  height : 0.5rem ;
+  background : #e2e7eb ;
+  color : #666 ;
+  display: inline-block;
+  text-align : center ;
+  border-radius : 0.1rem 0.1rem 0 0  ;
+  font-size : 0.14rem ;
+  line-height : 0.5rem ;
 }
