--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -1,3 +1,4 @@
+@import '../styles/variables';
 .new{
   padding : 0.2rem ;
   width : 100% ;
@@ -37,9 +38,77 @@
         width : 70px;
         margin-left : 0.45rem ;
       }
+      .show-pwd {
+        position: absolute;
+        left: 65%;
+        top: 0;
+        font-size: 0.16rem;
+        color: $dark_gray;
+        cursor: pointer;
+        user-select:none;
+      }
     }
   }
   .middleInput{
     width : 50%
+  }
+}
+.tagView{
+  .el-form{
+    width : 80%!important ;
+    .tip{
+      width : 100% ;
+      display: inline-block;
+      font-size : 0.14rem ;
+      color : #666;
+      height : 0.3rem ;
+      line-height :0.2rem;
+      .svg-icon{
+        width : 0.3rem;
+        height : 0.3rem;
+        margin-right : 0.05rem;
+      }
+    }
+    .line{
+      margin-left : 0.2rem;
+    }
+    .upload{
+      width : 25%;
+      float : left;
+      img{
+        width : 100%;
+      }
+    }
+    .showBtn{
+      float : left ;
+      margin-top: 1.1rem;
+    }
+    .intro{
+      //display: flex;
+      font-size : 0.14rem ;
+      width : 50% ;
+      float : right ;
+      color : #666;
+      line-height: 0.3rem;
+    }
+  }
+  .el-dialog{
+    .wrap{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      img{
+        width : 30% ;
+        margin-bottom : 0.5rem;
+      }
+    }
+  }
+  .bottom{
+    width : 80% ;
+    margin : 0.5rem auto ;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
