--- a/src/styles/step.scss
+++ b/src/styles/step.scss
@@ -64,3 +64,58 @@ h1{
   font-size : 0.14rem ;
   line-height : 0.5rem ;
 }
+.admission{
+  .admissionStep{
+    display: flex ;
+    flex-direction: row;
+    width : 80% ;
+    margin : 0.5rem auto ;
+    li{
+      width : 1rem ;
+      height : 1.2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      span:nth-child(1){
+        width : 0.7rem ;
+        height :0.7rem;
+        line-height : 0.7rem;
+        margin : 0.1rem auto;
+        border-radius : 50% ;
+        color : #666;
+        background : #eee;
+        border : 1px solid #333 ;
+        text-align: center;
+        font-size : 0.24rem;
+      }
+      span:nth-child(2){
+        font-size : 0.18rem ;
+        text-align: center ;
+        color : #333;
+        line-height : 0.3rem ;
+      }
+    }
+    .icon{
+      width : 40% ;
+      margin : auto ;
+      font-size : 0.28rem ;
+      color : #99a9bf;
+      font-weight : bold ;
+      text-align: center;
+    }
+    .isActive{
+      span:nth-child(1){
+        background : rgba(255, 0, 0, 0.6) ;
+        color : #fff ;
+        border : 1px solid transparent ;
+
+      }
+      span:nth-child(2){
+        color : rgba(255, 0, 0, 0.6);
+
+      }
+    }
+
+  }
+}
