--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -140,3 +140,13 @@
    padding-right : 0.3rem!important; ;
 
  }
+ .el-checkbox-button .el-checkbox-button__inner {
+   border: 1px solid #dcdfe6;
+   border-radius: 0.05rem!important;
+   width : 100px;
+   height : 40px;
+   font-size : 0.18rem;
+   line-height : 40px;
+   padding : 0;
+   text-align : center;
+ }
