--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -117,7 +117,7 @@ a:hover {
   }
 }
 .money_color{color: #ff0011}
-.tips_warn{ color : #f10110!important; }
+.tips_warn{ color : #f56c6c!important; }
 .c666{color: #666}
 .f18{font-size: 0.18rem}
 .f14{font-size: 0.14rem}
