--- a/src/styles/step.scss
+++ b/src/styles/step.scss
@@ -14,7 +14,8 @@ h1{
     justify-content: center;
     .upload{
       img{
-        width: 100% ;
+        max-width : 100% ;
+        max-height: 100%;
       }
     }
   }
