--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -2,6 +2,7 @@
   //margin : 0 0.3rem ;
   padding : 0.2rem 0.3rem ;
   box-sizing: border-box;
+  border-bottom: 1px solid #aaa ;
   .searchOrder{
     height : 34px ;
   }
