--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -173,7 +173,18 @@ a:hover {
 .w-e-toolbar{
   flex-wrap: wrap!important;
 }
+.w-e-text-container{
+  z-index: 0!important;
+
+}
 .w-e-menu{
   z-index: 1000!important;
+}
+.w-e-droplist,.w-e-list{
+  z-index: 20000!important;
+
+}
+.w-e-list:hover .w-e-droplist{
+  display: block!important;
 }
 
