--- a/src/styles/step.scss
+++ b/src/styles/step.scss
@@ -142,3 +142,11 @@ h1{
 
   }
 }
+.refuse{
+  text-align: left ;
+  font-size: 0.24rem ;
+  width: 100% ;
+  height: 0.8rem ;
+  line-height: 0.8rem ;
+  text-indent: 0.2rem ;
+}
