--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -47,7 +47,7 @@ html {
 .settings .el-dialog__headerbtn{display: none}
 #app .el-form-item__label{
   padding: 0 12px 0 0;
-  font-size: 14px;
+  font-size: 0.14rem;
 }
 #app .el-radio__label{    font-size: .14rem;
   padding-left: 10px;}
