--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -156,6 +156,7 @@ a:hover {
   }
   .tbColor {
     background : #fdebd1 ;
+    border-bottom: 1px solid #fbd7a3 ;
   }
   tr:hover>td{
     background : #fdebd1!important; ;
