--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -106,6 +106,13 @@
  //}
  .el-dialog__wrapper{
    z-index: 20000!important;
+   left : 170px ;
+   top: 143px;
+   //height: 100% ;
+ }
+ .el-dialog--center{
+   margin-top: 10vh!important;
+
  }
  .el-table__row{
    td{
