--- a/src/styles/goods.scss
+++ b/src/styles/goods.scss
@@ -89,6 +89,7 @@
       position: relative ;
       li{
         width : 20% ;
+        position : relative ;
 
         .el-upload{
           img{
@@ -106,6 +107,21 @@
         font-size: 0.12rem ;
       }
 
+      .deleteImg{
+        display: none;
+        position : absolute ;
+        bottom : 0;
+        width: 0.25rem ;
+        height: 0.25rem ;
+        left : 1.25rem;
+        background: url('../../../assets/imgs/delete.png') no-repeat center  rgba(255,255,255,0.1);
+        background-size : contain;
+        z-index: 1000;
+      }
+      li:hover .deleteImg{
+        display: inline-block;
+
+      }
     }
   }
   .dialogTop{
