--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -103,7 +103,8 @@
       float : left;
 
       img{
-          width : 100%;
+        max-width : 100%;
+        max-height : 100% ;
         }
         .imgWarn{
           position: absolute;
@@ -154,3 +155,4 @@
     justify-content: center;
   }
 }
+
