--- a/src/styles/goods.scss
+++ b/src/styles/goods.scss
@@ -32,7 +32,7 @@
         display: inline-block;
         padding-right: 0.3rem;
         text-align: right;
-        font-size: 14px;
+        font-size: 0.14rem;
         color: #606266;
         position: absolute ;
         /*box-sizing: border-box;*/
