修改推广品牌的商品详情视频播放

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -204,9 +204,10 @@ a:hover {
   align-items: center;
   justify-content: center;
   z-index : 20000;
-  img{
+  img , video{
     max-height : 60% ;
 
   }
+  
 }
 
