--- a/src/styles/goods.scss
+++ b/src/styles/goods.scss
@@ -107,7 +107,7 @@
         font-size: 0.12rem ;
       }
 
-      .deleteImg{
+      .deleteImg,{
         display: none;
         position : absolute ;
         bottom : 0;
@@ -122,6 +122,21 @@
         display: inline-block;
 
       }
+      
+    }
+    .deleteVideo{
+      display: none;
+      position : absolute ;
+      bottom : .6rem;
+      width: 0.25rem ;
+      height: 0.25rem ;
+      left : 1.25rem;
+      background: url('../../../assets/imgs/delete.png') no-repeat center  rgba(255,255,255,0.1);
+      background-size : contain;
+      z-index: 1000;
+    }
+    .hoveVideo:hover .deleteVideo{
+      display: inline-block;
     }
   }
   .dialogTop{
