增加流量方式

--- a/src/styles/activityTable.scss
+++ b/src/styles/activityTable.scss
@@ -9,7 +9,7 @@
   .search{
     width : 100% ;
     padding : 0.3rem 0.5rem 0.2rem;
-    height : 150px ;
+    // height : 150px ;
     border-bottom : 1px solid #aaa ;
     margin-bottom : 0.3rem ;
     .el-input{
