--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -34,10 +34,10 @@
 
   }
   .block{
-    width : 80% ;
+    width : 85% ;
     //float : left;
     display: inline-block;
-    margin-bottom : 0.2rem ;
+    // margin-bottom : 0.2rem ;
     margin-top : 0.2rem ;
 
     span{
@@ -66,7 +66,12 @@
       margin-right :0;
       text-align : center;
     }
-
+    .el-checkbox-group{
+      display: inline-block;
+    }
+     .el-select{
+      margin-left: 0px;
+    }
   }
   .note{
     padding-left : 0.3rem ;
