--- a/src/styles/tryout.scss
+++ b/src/styles/tryout.scss
@@ -118,7 +118,9 @@
         color : #456 ;
       }
     }
-
+    .service_input{
+      width: 0.8rem;
+    }
   }
   .tips_ul{
     display: flex;
