--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -68,6 +68,7 @@
     }
     .el-checkbox-group{
       display: inline-block;
+      font-size : 0.14rem ;
     }
      .el-select{
       margin-left: 0px;
