--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -177,5 +177,7 @@
    border-radius : 4px!important ;
    width: 80px;
  }
-
+ .el-picker-panel__footer .el-button--text span{
+  display: none;
+}
 
